--- a/Warehouse accounting/Solver/Solver.vcxproj
+++ b/Warehouse accounting/Solver/Solver.vcxproj
@@ -131,11 +131,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Item.h" />
+    <ClInclude Include="Invoice .h" />
     <ClInclude Include="Product.h" />
+    <ClInclude Include="Store.h" />
+    <ClInclude Include="Warehouse.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Invoice.cpp" />
+    <ClCompile Include="Product.cpp" />
+    <ClCompile Include="Store.cpp" />
+    <ClCompile Include="Warehouse.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
