--- a/List/Solver/Solver.vcxproj.filters
+++ b/List/Solver/Solver.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="MyLinkedList.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Point.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
