--- a/Shop/Test/Test.vcxproj
+++ b/Shop/Test/Test.vcxproj
@@ -166,7 +166,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Test.cpp" />
+    <ClCompile Include="Tests_Client.cpp" />
+    <ClCompile Include="Tests_Invoice.cpp" />
+    <ClCompile Include="Tests_Product.cpp" />
+    <ClCompile Include="Tests_Store.cpp" />
+    <ClCompile Include="Tests_Warehoese.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
